--- a/ProgettoSBB/sbbFrontNuovo/src/app/app.html
+++ b/ProgettoSBB/sbbFrontNuovo/src/app/app.html
@@ -1,3 +1,4 @@
 <app-top-menu></app-top-menu>
+<app-filter-bar></app-filter-bar>
 <router-outlet></router-outlet>
 <app-copy-right></app-copy-right>
