--- a/ProgettoSBB/sbbFrontNuovo/src/app/room-picker/room-picker.html
+++ b/ProgettoSBB/sbbFrontNuovo/src/app/room-picker/room-picker.html
@@ -3,7 +3,7 @@
 @if (searched()) {
   @if (rooms().length === 0) {
     <div class="msg-empty">
-      <i class="fa fa-info-circle"></i> Nessuna camera disponibile per le date selezionate.
+      Nessuna camera disponibile per le date selezionate.
     </div>
   } @else {
     <div class="room-grid">
