--- a/ProgettoSBB/sbbFrontNuovo/src/app/app.css
+++ b/ProgettoSBB/sbbFrontNuovo/src/app/app.css
@@ -2,12 +2,8 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  background-color: #f0f7ff;
 }
 
-router-outlet + * {
-  flex: 1;
-}
-
-app-copy-right {
-  margin-top: auto;
-}
+router-outlet + * { flex: 1; }
+app-copy-right { margin-top: auto; }
